--- a/mvc.csproj
+++ b/mvc.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0-preview2-35157" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Redis.Core" Version="1.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.2" />
     <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
